Create new test class at each iteration. (#69)
* Create new test class at each iteration.

* Format

* Add tests to JUnit plugin.