@@ -13,4 +13,28 @@ dependencies {
   implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.1")
   implementation("org.junit.platform:junit-platform-engine:1.10.3")
   implementation("org.junit.platform:junit-platform-commons:1.10.3")
+  testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+tasks.test {
+  useJUnitPlatform {
+    includeEngines("junit-jupiter", "fray")
+  }
+  dependsOn(":instrumentation:jdk:build")
+  val instrumentationTask = evaluationDependsOn(":instrumentation:agent")
+      .tasks.named("shadowJar").get()
+  val jdk = project(":instrumentation:jdk")
+  val jvmti = project(":jvmti")
+  val instrumentation = instrumentationTask.outputs.files.first().absolutePath
+  classpath += tasks.named("jar").get().outputs.files + files(configurations.runtimeClasspath)
+  executable("${jdk.layout.buildDirectory.get().asFile}/java-inst/bin/java")
+  jvmArgs("-agentpath:${jvmti.layout.buildDirectory.get().asFile}/native-libs/libjvmti.so")
+  jvmArgs("-javaagent:$instrumentation")
+  jvmArgs("-ea")
+  jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
+  jvmArgs("--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
 }
